--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <script src="https://kit.fontawesome.com/01e2513a5c.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="sidebar1.css">
+   <link rel="stylesheet" href="style.css">
    <title>abdussalam02</title>
 </head>
 <body
